# stableguard

./: .gitignore  Cargo.toml  config.toml  docker-compose.yml
data/: exchange_wallets.json
migrations/: 001_initial.sql  002_onramp_providers.sql  003_entity_attribution.sql  004_wallet_tracking.sql  005_anomaly_detection.sql  006_defi_events.sql
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/anomaly/: engine.rs  mod.rs  rules.rs  types.rs
src/api/: handlers.rs  mod.rs  queries.rs  types.rs
src/db/: repository.rs
src/entity/: label_store.rs  matcher.rs  mod.rs  ofac.rs
src/graph/: cluster.rs  mod.rs  tracker.rs
src/indexer/: chain.rs  decoder.rs  defi_decoder.rs  mod.rs  receipt_fetcher.rs  types.rs
src/onramp/: matcher.rs  mod.rs  registry.rs
src/seed/: exchange_wallets.rs  mod.rs
src/tokens/: registry.rs
src/wallet/: first_seen.rs  mod.rs
