[package]
name = "chainwatch-indexer"
version = "0.1.0"
edition = "2021"
description = "Multi-chain stablecoin transaction indexer for blockchain forensics"

[dependencies]
# Ethereum
alloy = { version = "0.12", features = [
    "full",
    "provider-ws",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "bigdecimal",
    "chrono",
] }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Utilities
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
